--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "main": "index.js",
   "bin": {
     "brain-games": "bin/brain-games.js",
+    "brain-even": "bin/brain-even.js",
     "code": "bin/brain-games.js"
   },
   "scripts": {
