--- a/package.json
+++ b/package.json
@@ -5,10 +5,10 @@
   "type": "module",
   "main": "index.js",
   "bin": {
+    "brain-calc": "bin/brain-calc.js",
     "brain-games": "bin/brain-games.js",
-    "brain-even": "bin/brain-even.js",
-    "code": "bin/brain-games.js"
-  },
+    "brain-even": "bin/brain-even.js"
+    },
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
