--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "type": "module",
   "main": "index.js",
   "bin": {
+    "brain-prime": "bin/brain-prime.js",
     "brain-progression": "bin/brain-progression.js",
     "brain-gcd": "bin/brain-gcd.js",
     "brain-calc": "bin/brain-calc.js",
